methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:9: error: too many arguments for method changeLigne: ()Unit
 ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne();recule();droite();avance();
                                        ^PatternPicture:9: error: too many arguments for method changeLigne: ()Unit
 ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne();recule();droite();avance();
                                                                                                          ^PatternPicture:9: error: not enough arguments for method ligne: (c: java.awt.Color, v: java.awt.Color)Unit.
Unspecified value parameters c, v.
 ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne(Color.RED,Color.BLUE);changeLigne(Color.GREEN,Color.YELLOW);ligne();recule();droite();avance();
                                                                                                                                          ^